--- a/Labs/Lab.1/Rachel_Le_Lab.1.b.ipynb
+++ b/Labs/Lab.1/Rachel_Le_Lab.1.b.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1842,7 +1842,7 @@
     "      #calculating regularization\n",
     "      dj_dw_j_reg = lambda_/m*w[i]\n",
     "\n",
-    "      #add regularizatoin to gradient element\n",
+    "      #add regularizatoin to\n",
     "      dj_dw[i] = dj_dw[i] + dj_dw_j_reg    \n",
     "\n",
     "    ### END CODE HERE ###         \n",
@@ -1902,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
